[package]
name = "futures-spsc"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["futures", "async", "future"]
repository = "https://github.com/alexcrichton/futures-spsc"
homepage = "https://github.com/alexcrichton/futures-spsc"
documentation = "https://docs.rs/futures-spsc"
description = """
Single-producer single-consumer message queues for futures.
"""

[dependencies]
futures = { git = "https://github.com/alexcrichton/futures-rs" }
